--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body id="body2" link="#CC9999" vlink="#CC9999" alink="#CC9999">
 <style>
 body {
-    background-image: url("afbeeldingen/background1.jpg");
+    background-image: url("http://imgur.com/a/2EDR4");
 }
 </style>
 
