--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body id="body2" link="#CC9999" vlink="#CC9999" alink="#CC9999">
 <style>
 body {
-    background-image: url("https://i.imgur.com/ob4xjZx.jpg");
+    background-image: url("http://imgur.com/Df68zzP");
 }
 </style>
 
