--- a/tops.html
+++ b/tops.html
@@ -15,9 +15,9 @@
    <TH>New York top. $15,00</TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/top1.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top2.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top3.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/HDHCake.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/aH0FQAu.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/qh44Z6p.jpg"></TD>
 <TR/>
 <TR>
    <TH>Donuts top. $10,00</TH>
@@ -25,9 +25,9 @@
    <TH>Urban outfitters Sweater. $20,00</TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/top4.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top5.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top6.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/TLhhLiB.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/9cF51ve.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/E68S323.jpg"></TD>
 <TR/>
 <TR>
    <TH>kelly Sweater. $20,00</TH>
@@ -35,9 +35,9 @@
    <TH>Denim Romper. $25,00</TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/top8.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top9.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top10.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/FFwdumx.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/XjEF3ah.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/bdFSN90.jpg"></TD>
 <TR/>
 <TR>
    <TH>Space Tie. $5,00</TH>
@@ -47,8 +47,8 @@
 
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/top11.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top12.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/top13.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/0KkbwQU.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/x85tUNy.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/fDXjc20.jpg"></TD>
 </TR>
 </TABLE>
