--- a/aboutus.html.html
+++ b/aboutus.html.html
@@ -54,23 +54,23 @@
 <TABLE>
   <TR>
      <TH>Chanel White. $10,00</TH>
-     <TD><img class="irc_mi" src="afbeeldingen/parfum1.jpg"></TD>
+     <TD><img class="irc_mi" src="http://i.imgur.com/sUL5JRU.jpg"></TD>
   <TR/>
   <TR>
-     <TD><img class="irc_mi" src="afbeeldingen/parfum2.jpg"></TD>
+     <TD><img class="http://i.imgur.com/kCJSqIs.jpg"></TD>
      <TH>Chanel Black. $10,00</TH>
   <TR/>
   <TR>
     <TH>Zara Black. $10,00</TH>
-    <TD><img class="irc_mi" src="afbeeldingen/parfum3.jpg"></TD>
+    <TD><img class="irc_mi" src="http://i.imgur.com/sIf89iY.jpg"></TD>
   <TR/>
   <TR>
-     <TD><img class="irc_mi" src="afbeeldingen/parfum4.jpg"></TD>
+     <TD><img class="irc_mi" src="http://i.imgur.com/4UfYhE5.jpg"></TD>
       <TH>Zara Woman. $10,00</TH>
   <TR/>
   <TR>
     <TH>Cloe. $10,00</TH>
-    <TD><img class="irc_mi" src="afbeeldingen/parfum5.jpg"></TD>
+    <TD><img class="http://i.imgur.com/NCHjbP6.jpg"></TD>
   <TR/>
 
 <TABLE/>
