--- a/aboutus.html.html
+++ b/aboutus.html.html
@@ -57,7 +57,7 @@
      <TD><img class="irc_mi" src="http://i.imgur.com/sUL5JRU.jpg"></TD>
   <TR/>
   <TR>
-     <TD><img class="http://i.imgur.com/kCJSqIs.jpg"></TD>
+     <TD><img class="irc_mi" src="http://i.imgur.com/kCJSqIs.jpg"></TD>
      <TH>Chanel Black. $10,00</TH>
   <TR/>
   <TR>
@@ -70,7 +70,7 @@
   <TR/>
   <TR>
     <TH>Cloe. $10,00</TH>
-    <TD><img class="http://i.imgur.com/NCHjbP6.jpg"></TD>
+    <TD><img class="irc_mi" src="http://i.imgur.com/NCHjbP6.jpg"></TD>
   <TR/>
 
 <TABLE/>
