--- a/accessoires.html
+++ b/accessoires.html
@@ -16,9 +16,9 @@
    <TH>Nechlace Black triangle. $10,00</TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting1.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting2.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting3.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/yBCNWXU.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/JhQLJ08.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/xxvoYYV.jpg"></TD>
 <TR/>
 <TR>
    <TH>Necklace Orange D. $10,00</TH>
@@ -26,9 +26,9 @@
    <TH>Bracelet Shoose Juicy. $6,00 </TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting4.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting5.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting6.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/N7ipuxq.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/DQStpVS.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/oJlStyU.jpg"></TD>
 <TR/>
 <TR>
    <TH>Arrows Crossed Rings. $5,00</TH>
@@ -36,9 +36,9 @@
    <TH>Rings set. $10,00</TH>
 <TR/>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting7.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting8.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ketting9.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/8jrb2DD.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/fqXr5i0.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/fUk7GXk.jpg"></TD>
 <TR/>
 
 
