--- a/bottems.html
+++ b/bottems.html
@@ -16,9 +16,9 @@
   <TR/>
 
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ass1.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass2.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass3.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/SQaRQhs.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/6emIrSM.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/aTt1sym.jpg"></TD>
 <TR/>
 
 <TR>
@@ -27,9 +27,9 @@
 <TH>Mom Jeans. $25,00</TH>
 </TR>
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ass4.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass5.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass6.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/dtYE78x.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/ABXhcwN.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/FVJOFIq.jpg"></TD>
 
 </TR>
 
@@ -40,9 +40,9 @@
    <TR/>
 
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ass8.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass9.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass10.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/vxL4WIU.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/qz8CgK4.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/KggsKMc.jpg"></TD>
 <TR/>
 <TR>
 <TH>Space Legging. $10,00</TH>
@@ -51,9 +51,9 @@
 </TR>
 
 <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/ass13.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass12.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/ass7.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/NBjQbJ7.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/PsBPLhc.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/zoFJTml.jpg"></TD>
 
 </TR>
 
