--- a/shoes.html
+++ b/shoes.html
@@ -20,9 +20,9 @@
   <TH>Black Sandals. $10,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/hak1.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sandal5.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/hak3.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/y8c6G5y.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/AUqPs6T.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/VJNWzer.jpg"></TD>
 </TR>
   <TR>
   <TH>Black&White Ballerina's. $10,00</TH>
@@ -30,9 +30,9 @@
   <TH>High heels black.1 $50,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/hak4.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/hak5.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/hak6.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/1tJX1AQ.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/dSjB6FD.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/o88Ybzp.jpg"></TD>
 </TR>
   <TR>
   <TH>High heels black.2 $30,00</TH>
@@ -40,9 +40,9 @@
   <TH>High heels white. $40,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/laars1.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/laars2.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/laars3.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/i2vEQzZ.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/O7PXnHA.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/mUv31Ss.jpg"></TD>
 </TR>
   <TR>
   <TH>Wedge Beige. $20,00</TH>
@@ -50,9 +50,9 @@
   <TH>High heels black.4 $30,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/laars4.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/laars5.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/laars6.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/h6Tun54.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/SkLLvku.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/7QPBinA.jpg"></TD>
 </TR>
   <TR>
   <TH>High heels black.3 $50,00</TH>
@@ -60,9 +60,9 @@
   <TH>Wedge Beige. $20,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/laars7.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/hak7.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker1.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/s5BHHHs.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/yvd4hoD.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/ZGpGVc5.jpg"></TD>
 </TR>
   <TR>
   <TH>High heels red. $20,00</TH>
@@ -70,9 +70,9 @@
   <TH>White hipster sneakers. $50,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker2.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker4.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker5.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/KcRM9f4.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/fravBPC.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/7BJWZSE.jpg"></TD>
 </TR>
   <TR>
   <TH>High heels black.4 $30,00</TH>
@@ -80,9 +80,9 @@
   <TH>High heels black.5 $20,00</TH>
 </TR>
   <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker6.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker7.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sneaker8.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/1O5dCfO.gif"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/RpjmpAG.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/0yqP9Jo.jpg"></TD>
 </TR>
   <TR>
    <TH>High heels black.3 $50,00</TH>
@@ -90,9 +90,9 @@
    <TH>Wedge Beige. $20,00</TH>
 </TR>
    <TR>
-   <TD><img class="irc_mi" src="afbeeldingen/sandal1.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/sandal2.jpg"></TD>
-   <TD><img class="irc_mi" src="afbeeldingen/sandal3.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/xcP1M9C.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/pQrjNa6.jpg"></TD>
+   <TD><img class="irc_mi" src="http://i.imgur.com/fULfu1Y.jpg"></TD>
 </TR>
    <TR>
    <TH>White hipster sneakers. $50,00</TH>
@@ -100,9 +100,9 @@
    <TH>High heels red. $20,00</TH>
 </TR>
    <TR>
-  <TD><img class="irc_mi" src="afbeeldingen/sandal5.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sandal6.jpg"></TD>
-  <TD><img class="irc_mi" src="afbeeldingen/sandal7.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/Un4GuuC.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/y8c6G5y.jpg"></TD>
+  <TD><img class="irc_mi" src="http://i.imgur.com/i2vEQzZ.jpg"></TD>
 </TR>
 
 <TABLE/>
